@@ -1,4 +1,5 @@
 1.9.1
+* Client: save mempool on exit and load in on startup
 * Client: on close save all balances to "balances.db" (for quicker start next time)
 * Client: adding of a new block to block's db is accounted inside the queue time statistics
 * Client: abort saving of UITXO.db before starting to precess a new block
